buildscript {
    ext.kotlin_version = '1.6.21'
    
    repositories {
        google()
        mavenCentral()
    }
    
    dependencies {
        classpath 'com.android.tools.build:gradle:7.2.1'
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
    }
}

apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'

buildDir = new File('/storage/emulated/0/Download/agent-toolbox-main/build')

android {
    namespace 'com.example.agenttoolbox'
    compileSdk 33

    // AGP 默认 ignoreAssetsPattern 含 <dir>_*，会忽略所有下划线开头的目录，
    // 导致 Python stdlib 里的 _path / _internal / _vendor / _pycache 等子包
    // 全部丢失（pip._internal / zipfile._path 运行时 import 失败）。
    // 这里覆盖默认 pattern，去掉 <dir>_* 规则，保留下划线目录。
    aaptOptions {
        ignoreAssetsPattern = '!.svn:!.git:!.ds_store:!*.scc:.*:!CVS:!thumbs.db:!picasa.ini:!*.bak'
    }

    defaultConfig {
        applicationId "com.example.agenttoolbox"
        minSdk 24
        targetSdk 32
        versionCode 224
        versionName "2.2.4"

        ndk {
            abiFilters 'arm64-v8a'
        }
    }

    sourceSets {
        main {
            manifest.srcFile 'AndroidManifest.xml'
            res.srcDirs = ['res']
            assets.srcDirs = ['assets']
            jniLibs.srcDirs = ['jniLibs']
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    
    kotlinOptions {
        jvmTarget = '17'
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
}
